--- a/Timer2/app/src/main/AndroidManifest.xml
+++ b/Timer2/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Activity.SequencePage" />
+        <activity android:name=".Activity.HomeActivity" />
         <activity android:name=".Activity.EditActivity" />
         <activity android:name=".Activity.MenuActivity" />
         <activity
