--- a/Converter/app/build.gradle
+++ b/Converter/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 apply from: '../git.gradle'
 def versionArray = getArray()
 
@@ -20,7 +19,6 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
     }
-
     signingConfigs {
         relase {
             storeFile file('C:\\Users\\vlad\\Keys\\keystore.jks')
@@ -29,7 +27,6 @@ android {
             keyPassword '12345678'
         }
     }
-
     productFlavors{
 
         freeFlavor{
@@ -68,9 +65,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.core:core-ktx:+"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.0"
 }
 repositories {
     maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     mavenCentral()
 }
+
